<resources>
    <string name="app_name">USSDAutoPushy</string>
    <string name="title_activity_navigation">USSDAuto(Pushy)</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="confirm_permissions">Confirm Permissions</string>
    <string name="Ussd">Ussd</string>
    <string name="sms">Sms</string>
    <string name="ussd_data">USSD Data</string>
    <string name="sms_data">SMS Data</string>
    <string name="transaction_reference">Reference</string>
    <string name="ussd_code">USSD Code</string>
    <string name="transaction_id">Trans. ID</string>
    <string name="sms_id">Sms Id</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sms_callback_urls">SMS Callback Urls</string>
    <string name="id">Id</string>
    <string name="sender">Sender</string>
    <string name="url">Url</string>
    <string name="callbacks">Callbacks</string>
    <string name="time">Time</string>
    <string name="message">Message</string>
    <string name="status">Status</string>
    <string name="callback_status">Callback</string>
</resources>