<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_ussd"
        android:icon="@drawable/ic_baseline_local_phone_24"
        android:title="@string/Ussd" />
    <item
        android:id="@+id/navigation_sms"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/sms" />
    <item
        android:id="@+id/navigation_callbacks"
        android:icon="@drawable/ic_baseline_sync_24"
        android:title="@string/callbacks" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

</menu>