<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardView="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    cardView:cardCornerRadius="8dp"
    cardView:cardElevation="8dp"
    android:layout_margin="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvUssdId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/transaction_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTransactionIdData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/tvUssdCode"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvReferenceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/transaction_reference"
            app:layout_constraintStart_toStartOf="@+id/tvUssdId"
            app:layout_constraintTop_toBottomOf="@+id/tvUssdId" />

        <TextView
            android:id="@+id/tvTransactionReferenceData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvUssdCode"
            app:layout_constraintTop_toTopOf="@+id/tvReferenceLabel" />

        <TextView
            android:id="@+id/tvUssdNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ussd_code"
            app:layout_constraintStart_toStartOf="@+id/tvUssdId"
            app:layout_constraintTop_toBottomOf="@+id/tvReferenceLabel" />

        <TextView
            android:id="@+id/tvUssdCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvUssdNumberLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvReferenceLabel" />

        <TextView
            android:id="@+id/tvStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUssdNumberLabel" />

        <TextView
            android:id="@+id/tvUssdStatusData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvStatusLabel"
            app:layout_constraintStart_toStartOf="@id/tvUssdCode" />

        <TextView
            android:id="@+id/tvUssdCallbackStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/callback_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatusLabel" />

        <TextView
            android:id="@+id/tvUssdCallbackStatusData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvUssdCallbackStatusLabel"
            app:layout_constraintStart_toStartOf="@id/tvUssdCode" />
        <TextView
            android:id="@+id/tvTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUssdCallbackStatusLabel" />

        <TextView
            android:id="@+id/tvTimeData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvUssdCode"
            app:layout_constraintTop_toBottomOf="@+id/tvUssdCallbackStatusData" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>